tests/fixtures/invalid/reversed_set.py
# Cannot call reversed() with Set[int]
x = reversed({1, 2, 3})
